@@ -1,92 +1,71 @@
 .user {
     color: #8E35EF;
 }
-
 .power_user {
     color: #F9A200;
 }
-
 .vip {
     color: #009F00;
 }
-
 .uploader {
     color: #0000FF;
 }
-
 .moderator {
     color: #FE2E2E;
 }
-
 .administrator {
     color: #B000B0;
 }
-
 .sysop {
     color: #61DF00;
 }
-
 #content .chatbot {
     color: #ff8b49;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-
 #content #chatList span.user {
-    font-weight: bold;
+    font-weight:bold;
 }
-
 #content #chatList span.power_user {
-    font-weight: bold;
+    font-weight:bold;
 }
-
 #content #chatList span.vip {
-    font-weight: bold;
+    font-weight:bold;
 }
-
 #content #chatList span.uploader {
-    font-weight: bold;
+    font-weight:bold;
 }
-
 #content #chatList span.moderator {
-    font-weight: bold;
+    font-weight:bold;
 }
-
 #content #chatList span.administrator {
-    font-weight: bold;
+    font-weight:bold;
 }
-
 #content #chatList span.sysop {
-    font-weight: bold;
+    font-weight:bold;
 }
-
 #content #chatList span.chatbot {
-    font-weight: bold;
-    font-style: italic;
+    font-weight:bold;
+    font-style:italic;
 }
-
 .user_bk {
     background: #8E35EF;
 }
-
 .power_user_bk {
     background: #F9A200;
 }
-
 .vip_bk {
     background: #009F00;
 }
-
 .uploader_bk {
     background: #0000FF;
 }
-
 .moderator_bk {
     background: #FE2E2E;
 }
-
 .administrator_bk {
     background: #B000B0;
 }
-
 .sysop_bk {
     background: #61DF00;
 }
