@@ -690,20 +690,20 @@ function get_server_load($windows = 0)
 function get_cache_config_data($the_names, $the_colors, $the_images)
 {
     $configfile = '';
-    $the_names  = str_replace(',', ",\n", trim($the_names, ','));
-    $the_colors = str_replace(',', ",\n", trim($the_colors, ','));
-    $the_images = str_replace(',', ",\n", trim($the_images, ','));
-    $configfile .= "\n\n\n" . '$class_names = array(
+    $the_names  = str_replace(',', ",\n  ", trim($the_names, ','));
+    $the_colors = str_replace(',', ",\n  ", trim($the_colors, ','));
+    $the_images = str_replace(',', ",\n  ", trim($the_images, ','));
+    $configfile .= "\n\n\n" . '$class_names = [
   ' . $the_names . '
-  );';
+];';
     // adding class colors like in user_functions
-    $configfile .= "\n\n\n" . '$class_colors = array(
+    $configfile .= "\n\n\n" . '$class_colors = [
   ' . $the_colors . '
-  );';
+];';
     // adding class pics like in user_functions
-    $configfile .= "\n\n\n" . '$class_images = array(
+    $configfile .= "\n\n\n" . '$class_images = [
   ' . $the_images . '
-  );';
+];';
 
     return $configfile;
 }
