@@ -1,58 +1,72 @@
 .user {
-  color: #8e35ef
+    color: #8E35EF;
 }
 .power_user {
-  color: #f9a200
+    color: #F9A200;
 }
 .vip {
-  color: #009f00
+    color: #009F00;
 }
 .uploader {
-  color: #00f
+    color: #0000FF;
 }
 .moderator {
-  color: #fe2e2e
+    color: #FE2E2E;
 }
 .administrator {
-  color: #b000b0
+    color: #B000B0;
 }
 .sysop {
-  color: #61df00
+    color: #61DF00;
 }
 #content .chatbot {
-  color: #ff8b49
+    color: #ff8b49;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-#content #chatList span.administrator,
-#content #chatList span.moderator,
-#content #chatList span.power_user,
-#content #chatList span.sysop,
-#content #chatList span.uploader,
-#content #chatList span.user,
+#content #chatList span.user {
+    font-weight:bold;
+}
+#content #chatList span.power_user {
+    font-weight:bold;
+}
 #content #chatList span.vip {
-  font-weight: 700
+    font-weight:bold;
+}
+#content #chatList span.uploader {
+    font-weight:bold;
+}
+#content #chatList span.moderator {
+    font-weight:bold;
+}
+#content #chatList span.administrator {
+    font-weight:bold;
+}
+#content #chatList span.sysop {
+    font-weight:bold;
 }
 #content #chatList span.chatbot {
-  font-weight: 700;
-  font-style: italic
+    font-weight:bold;
+    font-style:italic;
 }
 .user_bk {
-  background: #8e35ef
+    background: #8E35EF;
 }
 .power_user_bk {
-  background: #f9a200
+    background: #F9A200;
 }
 .vip_bk {
-  background: #009f00
+    background: #009F00;
 }
 .uploader_bk {
-  background: #00f
+    background: #0000FF;
 }
 .moderator_bk {
-  background: #fe2e2e
+    background: #FE2E2E;
 }
 .administrator_bk {
-  background: #b000b0
+    background: #B000B0;
 }
 .sysop_bk {
-  background: #61df00
+    background: #61DF00;
 }
+
