@@ -1,4 +1,5 @@
 8 Jun 2018
+fix: adding/removing user class not updating class colors
 fix: ambiguous 'status' view_forum.php
 add: missing sqlerr in many queries
 fix: missing space in query view_topic.php
